fix: fix text-overflow bug (#1097)

--- a/packages/zarm/src/picker-view/style/component.scss
+++ b/packages/zarm/src/picker-view/style/component.scss
@@ -71,5 +71,6 @@
   @include e(content) {
     flex: 1;
     display: flex;
+    width: 100%;
   }
 }
